Fix text alignment in RTL layout

--- a/packages/scrabble-solver/src/modals/MenuModal/MenuModal.module.scss
+++ b/packages/scrabble-solver/src/modals/MenuModal/MenuModal.module.scss
@@ -42,5 +42,12 @@
 
 .content {
   flex: 1;
-  text-align: left;
+
+  [dir='ltr'] & {
+    text-align: left;
+  }
+
+  [dir='rtl'] & {
+    text-align: right;
+  }
 }
